made home view for user

--- a/assets/translation/ar-SA.json
+++ b/assets/translation/ar-SA.json
@@ -1,4 +1,12 @@
 {
-    "login": "تسجيل الدخول",
-    "logout": "تسجيل الخروج"
+  "google_login": "تسجيل الدخول باستخدام جوجل",
+  "login": "تسجيل الدخول",
+  "logout": "تسجيل الخروج",
+  "home": "الصفحة الرئيسية",
+  "profile": "الملف الشخصي",
+  "quizzes": "الاختبارات",
+  "quiz": "اختبار",
+  "sessions": "الدروس",
+  "settings": "الإعدادات",
+  "welcome": "مرحبا"
 }
