added empty, score, play with bottom navigation bar

--- a/assets/translation/ar-SA.json
+++ b/assets/translation/ar-SA.json
@@ -12,5 +12,9 @@
   "tasks": "الواجبات",
   "loading": "...جار التحميل",
   "submit": "إرسال",
-  "are_you_sure": "هل أنت متأكد؟"
+  "are_you_sure": "هل أنت متأكد؟",
+  "no_quizzes_found": "لا يوجد اختبارات في الوقت الحالي",
+  "no_sessions_found": "لا يوجد دروس في الوقت الحالي",
+  "no_tasks_found": "لا يوجد واجبات في الوقت الحالي",
+  "no_results_found": "لا يوجد نتائج"
 }
