--- a/assets/translation/en-US.json
+++ b/assets/translation/en-US.json
@@ -10,7 +10,7 @@
   "settings": "Settings",
   "welcome": "Welcome",
   "tasks": "Tasks",
-  "Loading": "Loading...",
+  "loading": "Loading...",
   "submit": "Submit",
   "are_you_sure": "Are you sure you want to submit?",
   "no_quizzes_found": "There are no Quizzes Right Now",
