added help, minor modifications

--- a/assets/translation/en-US.json
+++ b/assets/translation/en-US.json
@@ -16,5 +16,6 @@
   "no_quizzes_found": "There are no Quizzes Right Now",
   "no_sessions_found": "There are no Sessions Right Now",
   "no_tasks_found": "There are no Tasks Right Now",
-  "no_results_found": "No Results Found"
+  "no_results_found": "No Results Found",
+  "help": "Help"
 }
