--- a/assets/translation/ar-SA.json
+++ b/assets/translation/ar-SA.json
@@ -16,5 +16,6 @@
   "no_quizzes_found": "لا يوجد اختبارات في الوقت الحالي",
   "no_sessions_found": "لا يوجد دروس في الوقت الحالي",
   "no_tasks_found": "لا يوجد واجبات في الوقت الحالي",
-  "no_results_found": "لا يوجد نتائج"
+  "no_results_found": "لا يوجد نتائج",
+  "help": "المساعدة"
 }
