added di, prefs, theme providers

--- a/assets/translation/ar-SA.json
+++ b/assets/translation/ar-SA.json
@@ -17,5 +17,11 @@
   "no_sessions_found": "لا يوجد دروس في الوقت الحالي",
   "no_tasks_found": "لا يوجد واجبات في الوقت الحالي",
   "no_results_found": "لا يوجد نتائج",
-  "help": "المساعدة"
+  "help": "المساعدة",
+  "quizzes_taken": "الاختبارات المنجزة",
+  "quizzes_passed": "الاختبارات المجتازة",
+  "score": "النتيجة",
+  "light_mode": "الوضع الفاتح",
+  "dark_mode": "الوضع الداكن",
+  "language": "تغيير اللغة"
 }
