added new ui for sessions

--- a/assets/translation/ar-SA.json
+++ b/assets/translation/ar-SA.json
@@ -35,5 +35,6 @@
   "correct": "صحيح",
   "upload_task": "ارفع الملف",
   "details": "التفاصيل",
-  "problem_with_link": "هناك مشكلة في الرابط، من فضلك حاول مرة اخرى لاحقا"
+  "problem_with_link": "هناك مشكلة في الرابط، من فضلك حاول مرة اخرى لاحقا",
+  "answer_all_questions": "من فضلك أجب على جميع الأسئلة"
 }
