--- a/assets/translation/ar-SA.json
+++ b/assets/translation/ar-SA.json
@@ -36,5 +36,6 @@
   "upload_task": "ارفع الملف",
   "details": "التفاصيل",
   "problem_with_link": "هناك مشكلة في الرابط، من فضلك حاول مرة اخرى لاحقا",
-  "answer_all_questions": "من فضلك أجب على جميع الأسئلة"
+  "answer_all_questions": "من فضلك أجب على جميع الأسئلة",
+  "fill_feedback": "من فضلك اضف تعليقك"
 }
