--- a/assets/translation/ar-SA.json
+++ b/assets/translation/ar-SA.json
@@ -37,5 +37,8 @@
   "details": "التفاصيل",
   "problem_with_link": "هناك مشكلة في الرابط، من فضلك حاول مرة اخرى لاحقا",
   "answer_all_questions": "من فضلك أجب على جميع الأسئلة",
-  "fill_feedback": "من فضلك اضف تعليقك"
+  "fill_feedback": "من فضلك اضف تعليقك",
+  "help_you": "كيف نساعدك؟",
+  "help_description": "يبدو أنك تواجه بعض المشاكل، يمكنك التواصل معنا بالاسفل",
+  "chat_with_us": "تواصل معنا"
 }
