added photo in user payload, removed drawer and made it in profile

--- a/assets/translation/en-US.json
+++ b/assets/translation/en-US.json
@@ -40,5 +40,6 @@
   "fill_feedback": "Please fill your feedback",
   "help_you": "How can we help you?",
   "help_description": "It looks you have some trouble, please contact us.",
-  "chat_with_us": "Contact us"
+  "chat_with_us": "Contact us",
+  "tasks_feedback": "Tasks Feedback"
 }
