--- a/assets/translation/ar-SA.json
+++ b/assets/translation/ar-SA.json
@@ -40,5 +40,6 @@
   "fill_feedback": "من فضلك اضف تعليقك",
   "help_you": "كيف نساعدك؟",
   "help_description": "يبدو أنك تواجه بعض المشاكل، يمكنك التواصل معنا بالاسفل",
-  "chat_with_us": "تواصل معنا"
+  "chat_with_us": "تواصل معنا",
+  "tasks_feedback": "تعليقات الواجبات"
 }
