--- a/assets/translation/en-US.json
+++ b/assets/translation/en-US.json
@@ -59,5 +59,22 @@
   "no_submissions": "There are no submissions until now",
   "no_feedback": "No feedbacks until now",
   "quiz_already_submitted": "Quiz Already Submitted",
-  "no_content": "No content until now"
+  "no_content": "No content until now",
+  "admin": "Admin",
+  "feedbacks": "Feedbacks",
+  "users": "Users",
+  "add_session": "Add Session",
+  "edit_session": "Edit Session",
+  "delete_session": "Delete Sessions",
+  "add_quiz": "Add Quiz",
+  "edit_quiz": "Edit Quiz",
+  "delete_quiz": "Delete Quiz",
+  "add_task": "Add Task",
+  "edit_task": "Edit Task",
+  "delete_task": "Delete Task",
+  "delete_session_confirmation": "Are you sure you want to delete this session?",
+  "delete_quiz_confirmation": "Are you sure you want to delete this quiz?",
+  "delete_task_confirmation": "Are you sure you want to delete this task?",
+  "yes": "Yes",
+  "no": "No"
 }
