--- a/assets/translation/en-US.json
+++ b/assets/translation/en-US.json
@@ -97,5 +97,8 @@
   "add_point": "Add Point",
   "stats": "Stats",
   "title": "Name",
-  "total_score": "Total Score"
+  "total_score": "Total Score",
+  "registration": "Registration",
+  "attendance": "Attendance",
+  "add_name": "Add Name"
 }
