fixed session order bug, splash bug

--- a/assets/translation/ar-SA.json
+++ b/assets/translation/ar-SA.json
@@ -100,5 +100,6 @@
   "total_score": "الدرجة الكلية",
   "registration": "تسجيل الحضور",
   "attendance": "الحضور",
-  "add_name": "أضف اسم"
+  "add_name": "أضف اسم",
+  "documentation": "التفاصيل"
 }
