--- a/assets/translation/en-US.json
+++ b/assets/translation/en-US.json
@@ -100,5 +100,6 @@
   "total_score": "Total Score",
   "registration": "Registration",
   "attendance": "Attendance",
-  "add_name": "Add Name"
+  "add_name": "Add Name",
+  "documentation": "Documentation"
 }
